--- a/New-Car-Loan/src/app/features/vehicle-details/components/vehicle-form-loader/vehicle-form-loader.css
+++ b/New-Car-Loan/src/app/features/vehicle-details/components/vehicle-form-loader/vehicle-form-loader.css
@@ -10,10 +10,12 @@
     background: #ffffff;
     display: flex;
     flex-direction: column;
+    align-items: center;
     justify-content: center;
     /* Center vertically */
-    padding: clamp(24px, 6vh, 48px) 16px;
+    /* padding: clamp(24px, 6vh, 48px) 16px; */
     box-sizing: border-box;
+    margin-top: -140px;
 }
 
 .loader-spacer {
