--- a/New-Car-Loan/src/app/shared/components/drawer/drawer.css
+++ b/New-Car-Loan/src/app/shared/components/drawer/drawer.css
@@ -60,8 +60,8 @@
     border-top-right-radius: 10px;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
-    padding-top: 12px;
-    padding-bottom: 24px;
+    /* padding-top: 12px; */
+    /* padding-bottom: 24px; */
     overflow-y: auto;
     overflow-x: hidden;
   }
@@ -73,6 +73,8 @@
 
 .brand-logo {
   padding-top: 2px;
+  height: 16px;
+  width:14px;
 }
 .drawer-backdrop {
   position: fixed;
@@ -126,8 +128,8 @@
   width: 100%;
   text-align: center;
   box-sizing: border-box;
-  padding-top:28px;
-  padding-bottom:20px;
+  padding-top:24px;
+  padding-bottom:16px;
 }
 
 .drawer-title {
@@ -307,7 +309,7 @@
   padding-top: 20px;
   padding-left: 16px;
   padding-right: 16px;
-  padding-bottom:24px;
+  padding-bottom:12px;
   width: 100%;
   /* height: 40px; */
   display: flex;
